og image about content

--- a/client.html
+++ b/client.html
@@ -8,7 +8,7 @@
 	<meta property="og:type" content="article"/>
 	<meta property="og:title" content="Dax"/>
 	<meta property="og:description" content="Creative Agency"/>
-	<meta property="og:image" content="https://kaz33359.github.io/Dax/assets/images/apple-touch-icon-114x114-white.png"/>
+	<meta property="og:image" content="./assets/images/og-logo.png"/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="DAX">
