--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<meta property="og:type" content="article"/>
 		<meta property="og:title" content="Dax"/>
 		<meta property="og:description" content="Creative Agency"/>
-		<meta property="og:image" content="https://kaz33359.github.io/Dax/assets/images/apple-touch-icon-114x114-white.png"/>
+		<meta property="og:image" content="./assets/images/og-logo.png"/>
+		<!-- <meta property="og:image" content="assets/images/apple-touch-icon-114x114-white.png"/> -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="DAX">
@@ -224,7 +225,7 @@
 							<div class="headline-xxxxs nav-title-color nav-reveal-anim js-nav-anim">Address</div>
 						</div>
 						<div class="nav-fade-anim js-nav-anim margin-top-10">
-							<a href="#" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">
+							<a href="https://g.page/dax-ads-kannur?share" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">
 								DAX #1st Floor <br>
 								Arafa Complex, Aarat Road,<br>
 								Kannur, Pin :670001
@@ -238,7 +239,7 @@
 							<div class="headline-xxxxs nav-title-color nav-reveal-anim js-nav-anim">Phone</div>
 						</div>
 						<div class="nav-fade-anim js-nav-anim margin-top-10">
-							<a href="tel:918281447758" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">+91 8281447758</a><br>
+							<a href="tel:919746583440" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">+91 9746583440</a><br>
 							<a href="tel:919447774937" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">+91 9447774937</a>
 						</div>
 					</div><!-- nav-phone end -->
@@ -656,11 +657,12 @@
 			</section><!-- about us end -->
 
 
-			<!-- about us start -->
-			<section id="down" class="pos-rel section-bg-dark-1">
+			<!-- Services start -->
+
+
+			<section class="pos-rel section-bg-dark-1">
 				<!-- pos-rel start -->
 				<div class="pos-rel padding-top-bottom-120">
-					<!-- flex-container start -->
 					<div class="container flex-container padding-bottom-70">
 						<!-- column start -->
 						<div class="six-columns padding-bottom-20">
@@ -678,100 +680,96 @@
 						</div><!-- column end -->
 					</div><!-- flex-container end -->
 
-					<!-- pos-rel start -->
-					<div class="pos-rel padding-top-bottom-10">
+					<!-- padding-top-bottom-90 start -->
+					<div class="padding-top-bottom-90 hidden-box pos-rel">
+						<!-- js-3-view-slider start -->
+						<div class="js-3-view-slider margin-left-right-10">
+							<!-- swiper-wrapper start -->
+							<div class="swiper-wrapper">
+								<!-- swiper-slide start -->
+								<div class="swiper-slide test">
+									<div class="margin-left-right-10">
+										<h3 class="headline-xxxs">GRAPHIC DESIGNING</h3>
+										<p class="body-text-s margin-top-20">
+											We can attracte customers towards your business with a strong brand look & plan of action. utilize our graphic design skills and let's brand or rebrand your business now.
+											<br><br><br><br>
+										</p>
+									</div>
+								</div><!-- swiper-slide end -->
 
-						<!-- padding-top-bottom-90 start -->
-						<div class="padding-top-bottom-50 hidden-box pos-rel">
-							<!-- js-3-view-slider start -->
-							<div class="js-3-view-slider margin-left-right-10">
-								<!-- swiper-wrapper start -->
-								<div class="swiper-wrapper">
-									<!-- swiper-slide start -->
-									<div class="swiper-slide test">
-										<div class="margin-left-right-10">
-											<h3 class="headline-xxxs">GRAPHIC DESIGNING</h3>
-											<p class="body-text-s margin-top-20">
-												We can attracte customers towards your business with a strong brand look & plan of action. utilize our graphic design skills and let's brand or rebrand your business now.
-												<br><br><br>
-											</p>
-										</div>
-									</div><!-- swiper-slide end -->
+								<!-- swiper-slide start -->
+								<div class="swiper-slide test">
+									<div class="margin-left-right-10">
+										<h3 class="headline-xxxs">DIGITAL MARKETING</h3>
+										<p class="body-text-s margin-top-20">
+											The digital marketing team at DAX provide suitable marketing solutions to businesses. Boosting your business growth by creating brand awareness and generating leads through various digital marketing services.
+											<br><br><br>
+										</p>
+									</div>
+								</div><!-- swiper-slide end -->
 
-									<!-- swiper-slide start -->
-									<div class="swiper-slide test">
-										<div class="margin-left-right-10">
-											<h3 class="headline-xxxs">DIGITAL MARKETING</h3>
-											<p class="body-text-s margin-top-20">
-												The digital marketing team at DAX provide suitable marketing solutions to businesses. Boosting your business growth by creating brand awareness and generating leads through various digital marketing services.
-												<br><br>
-											</p>
-										</div>
-									</div><!-- swiper-slide end -->
+								<!-- swiper-slide start -->
+								<div class="swiper-slide test">
+									<div class="margin-left-right-10">
+										<h3 class="headline-xxxs">WEB DESIGN & DEVELOPMENT</h3>
+										<p class="body-text-s margin-top-20">
+											Our profiled expertise with improved softwares, design, develop, maintain and promote websites with starring user satisfaction.
+											<br><br><br><br><br>
+										</p>
+									</div>
+								</div><!-- swiper-slide end -->
 
-									<!-- swiper-slide start -->
-									<div class="swiper-slide test">
-										<div class="margin-left-right-10">
-											<h3 class="headline-xxxs">WEB DESIGN & DEVELOPMENT</h3>
-											<p class="body-text-s margin-top-20">
-												Our profiled expertise with improved softwares, design, develop, maintain and promote websites with starring user satisfaction.
-												<br><br><br><br>
-											</p>
-										</div>
-									</div><!-- swiper-slide end -->
+								<!-- swiper-slide start -->
+								<div class="swiper-slide test">
+									<div class="margin-left-right-10">
+										<h3 class="headline-xxxs">APP DEVELOPMENT & MARKETING</h3>
+										<p class="body-text-s margin-top-20">
+											At DAX, our programmers will help you build and optimize an "App" with an eye-catching user interface that is efficient and easy-to-use. This will provide ease of access to the services you have to offer and improve customer interactions with your business.
+											<br><br>
+										</p>
+									</div>
+								</div><!-- swiper-slide end -->
 
-									<!-- swiper-slide start -->
-									<div class="swiper-slide test">
-										<div class="margin-left-right-10">
-											<h3 class="headline-xxxs">APP DEVELOPMENT & MARKETING</h3>
-											<p class="body-text-s margin-top-20">
-												At DAX, our programmers will help you build and optimize an "App" with an eye-catching user interface that is efficient and easy-to-use. This will provide ease of access to the services you have to offer and improve customer interactions with your business.
-												<br>
-											</p>
-										</div>
-									</div><!-- swiper-slide end -->
+								<!-- swiper-slide start -->
+								<div class="swiper-slide test">
+									<div class="margin-left-right-10">
+										<h3 class="headline-xxxs">AD PRODUCTION</h3>
+										<p class="body-text-s margin-top-20">
+											Video marketing is a powerful means for promoting anything you want online, whether it’s a product, service, opt-in form, website, blog, etc. Videos are now an expected component of any website.
+											<br><br><br>
+										</p>
+									</div>
+								</div><!-- swiper-slide end -->
 
-									<!-- swiper-slide start -->
-									<div class="swiper-slide test">
-										<div class="margin-left-right-10">
-											<h3 class="headline-xxxs">AD PRODUCTION</h3>
-											<p class="body-text-s margin-top-20">
-												Video marketing is a powerful means for promoting anything you want online, whether it’s a product, service, opt-in form, website, blog, etc. Videos are now an expected component of any website.
-												<br><br>
-											</p>
-										</div>
-									</div><!-- swiper-slide end -->
+								<!-- swiper-slide start -->
+								<div class="swiper-slide test">
+									<div class="margin-left-right-10">
+										<h3 class="headline-xxxs">SOFTWARE SOLUTIONS</h3>
+										<p class="body-text-s margin-top-20">
+											We are delivering complex web solutions and online platform for our valuable clients. Our dedicated and experienced team works directly with our clients to build a universal product and help them develop their customer growth.
+											<br><br><br>
+										</p>
+									</div>
+								</div><!-- swiper-slide end -->
+							</div><!-- swiper-wrapper end -->
 
-									<!-- swiper-slide start -->
-									<div class="swiper-slide test">
-										<div class="margin-left-right-10">
-											<h3 class="headline-xxxs">SOFTWARE SOLUTIONS</h3>
-											<p class="body-text-s margin-top-20">
-												We are delivering complex web solutions and online platform for our valuable clients. Our dedicated and experienced team works directly with our clients to build a universal product and help them develop their customer growth.
-												<br><br>
-											</p>
-										</div>
-									</div><!-- swiper-slide end -->
-								</div><!-- swiper-wrapper end -->
+							<!-- swiper-button-prev start -->
+							<div class="swiper-button-prev-box">
+								<div class="swiper-button-prev"></div>
+							</div><!-- swiper-button-prev end -->
+							<!-- swiper-button-next start -->
+							<div class="swiper-button-next-box">
+								<div class="swiper-button-next"></div>
+							</div><!-- swiper-button-next end -->
 
-								<!-- swiper-button-prev start -->
-								<div class="swiper-button-prev-box">
-									<div class="swiper-button-prev"></div>
-								</div><!-- swiper-button-prev end -->
-								<!-- swiper-button-next start -->
-								<div class="swiper-button-next-box">
-									<div class="swiper-button-next"></div>
-								</div><!-- swiper-button-next end -->
-
-								<!-- swiper-pagination start -->
-								<div class="pagination-box">
-									<div class="swiper-pagination counter-pagination"></div>
-								</div><!-- swiper-pagination end -->
-							</div><!-- js-3-view-slider end -->
-						</div><!-- padding-top-bottom-90 end -->
-					</div><!-- pos-rel end -->
+							<!-- swiper-pagination start -->
+							<div class="pagination-box">
+								<div class="swiper-pagination counter-pagination"></div>
+							</div><!-- swiper-pagination end -->
+						</div><!-- js-3-view-slider end -->
+					</div><!-- padding-top-bottom-90 end -->
 				</div><!-- pos-rel end -->
-			</section><!-- about us end -->
+			</section><!-- services end -->
 
 
 			<!-- team start -->
@@ -1435,7 +1433,7 @@
 						<!-- column start -->
 						<div class="eight-columns">
 							<h4 class="column-l-r-margin-10 headline-l footer-title">
-								The <span class="text-color-red">Best<br>Agency</span> for<br>Your Businnes
+								The <span class="text-color-red">Best<br>Agency</span> for<br>Your Business
 							</h4>
 						</div><!-- column end -->
 						<!-- column start -->
@@ -1470,7 +1468,7 @@
 							<div class="column-l-r-margin-10">
 								<div class="headline-xxxxs">Email</div>
 								<div class="margin-top-10">
-									<a href="#" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">hello@daxads.com</a><br>
+									<a href="mailto:hello@thedaxads.com" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">hello@thedaxads.com</a><br>
 									<!-- <a href="#" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">email@umaya_job.com</a> -->
 								</div>
 							</div>
@@ -1493,7 +1491,7 @@
 							<div class="column-l-r-margin-10">
 								<div class="headline-xxxxs">Phone</div>
 								<div class="margin-top-10">
-									<a href="tel:918281447758" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">+91 8281447758</a><br>
+									<a href="tel:919746583440" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">+91 9746583440</a><br>
 									<a href="tel:919447774937" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">+91 9447774937</a>
 								</div>
 							</div>
