--- a/about-us.html
+++ b/about-us.html
@@ -58,6 +58,34 @@
 			</span>
 		</a><!-- scroll down btn end -->
 
+		<!-- Whatsapp icon start -->
+		<style media="screen">
+		.float{
+			position:fixed;
+			width:60px;
+			height:60px;
+			bottom:40px;
+			right:40px;
+			background-color:#000;
+			color:#FFF;
+			border-radius:50px;
+			text-align:center;
+			font-size:30px;
+			box-shadow: 2px 2px 2px #000;
+			z-index:100;
+			}
+
+			.my-float{
+			margin-top:16px;
+			}
+		</style>
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<a href="https://api.whatsapp.com/send?phone=919746583440" class="float" target="_blank">
+		<i class="fa fa-whatsapp my-float"></i>
+		</a>
+		<!-- Whatsapp icon end -->
+
 		<!-- header start -->
 		<header class="fixed-header">
 			<!-- logo start -->
@@ -134,6 +162,9 @@
 					<a href="about-us.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
 				</li>
 				<li class="landing-nav__btn">
+					<a href="services.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
+				</li>
+				<li class="landing-nav__btn">
 					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
@@ -142,7 +173,7 @@
 				<li class="landing-nav__btn">
 					<a href="blog.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
-				<li class="landing-nav__btn active">
+				<li class="landing-nav__btn">
 					<a href="contact.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
 				</li>
 			</ul>
@@ -177,6 +208,13 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
+						<a href="services.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+							<span class="nav-btn__inner" data-text="About">Services</span>
+						</a>
+					</li><!-- nav-btn-box end -->
+
+					<!-- nav-btn-box start -->
+					<li class="nav-btn-box">
 						<a href="academy.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Academy">Academy</span>
 						</a>
@@ -198,7 +236,7 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="contact.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="contact.htlm" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Contact">Contact</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -225,8 +263,8 @@
 						<div class="nav-fade-anim js-nav-anim margin-top-10">
 							<a href="https://g.page/dax-ads-kannur?share" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">
 								DAX #1st Floor <br>
-								Arafa Complex , Aarat Road ,<br>
-								Kannur , Pin :670001
+								Arafa Complex, Aarat Road,<br>
+								Kannur, Pin :670001
 							</a>
 						</div>
 					</div><!-- nav-address end -->
@@ -246,7 +284,7 @@
 				<!-- nav-copyright start -->
 				<div class="nav-copyright text-right">
 					<p class="copyright-style nav-fade-anim js-nav-anim">
-						&copy; Copyright 2020 Dax. Developed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
+						&copy; Copyright 2021 Dax. Developed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
 					</p>
 				</div><!-- nav-copyright end -->
 			</div><!-- pos-rel end -->
@@ -262,8 +300,8 @@
 						<h3 class="headline-xs hidden-box">
 							<span class="anim-slide"><span class="text-color-red">WE ARE DIGITAL CREATIVE AGENCY</span></span>
 						</h3>
-						<h2 class="headline-xxs margin-top-20 anim-text-reveal tr-delay-03">
-					DAX Ads is one of those unique digital marketing providers in Kannur which blends creativity with feasibility. We offer a plethora of services like Branding, SEM, SMM, Complete Digital Marketing, Website Design and Development, Domain Registration, Web Hosting, E - Commerce Solutions, Content Management System and other IT related projects. We don't believe getting lost within the crowd. So, we differentiate ourselves by delivering what we promise. Although we provide digital marketing solutions at unbelievably attractive packages, quality are some things we never compromise on. So, if you're willing to occupy the digital space before others, our doors are wide open!
+						<h2 class="headline-xxxs margin-top-20 anim-text-reveal tr-delay-03">
+					DAX Ads is one of those unique digital marketing providers in Kannur which blends creativity with feasibility. We offer a plethora of services like Branding, SEM, SMM, Complete Digital Marketing, Website Design and Development, Domain Registration, Web Hosting, E - Commerce Solutions, Content Management System and other IT related projects. <br><br>We don't believe getting lost within the crowd. So, we differentiate ourselves by delivering what we promise. Although we provide digital marketing solutions at unbelievably attractive packages, quality are some things we never compromise on. So, if you're willing to occupy the digital space before others, our doors are wide open!
 						</h2>
 					</div>
 				</div><!-- lines-container end -->
@@ -286,7 +324,6 @@
 									</h2>
 									<p class="body-text-s margin-top-20 anim-text-reveal tr-delay-02">
 										We build digital experiences and brands that people fall in love with. When I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable.
-
 									</p>
 								</div>
 							</div><!-- wo we are end -->
@@ -469,8 +506,11 @@
 					<div class="flex-container flex-align-center">
 						<!-- column start -->
 						<div class="eight-columns">
-							<h4 class="column-l-r-margin-10 headline-l footer-title">
-								The <span class="text-color-red">Best<br>Agency</span> for<br>Your Business
+							<h4 class="column-l-r-margin-10 headline-l footer-title" style="font-size:40px;">
+								<!-- The <span class="text-color-red">Best<br>Agency</span> for<br>Your Business -->
+								<span class="text-color-red">A</span>bsolute<span class="text-color-red">...</span><br>
+								We’re Not Jusy Your<span class="text-color-red"> Agency,</span><br>
+								We’re Your<span class="text-color-red"> Partner.</span><br>
 							</h4>
 						</div><!-- column end -->
 						<!-- column start -->
@@ -481,6 +521,9 @@
 								</li>
 								<li>
 									<a href="about-us.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
+								</li>
+								<li>
+									<a href="Services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
 								</li>
 								<li>
 									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
@@ -554,7 +597,7 @@
 					<!-- footer-copyright start -->
 					<div class="footer-copyright text-center pos-abs pos-bottom-center">
 						<p class="copyright-style">
-							&copy; Copyright 2020 Dax. Developed By <a href="#" class="text-weight-700 js-pointer-small">DAX</a>
+							&copy; Copyright 2021 Dax. Designed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
 						</p>
 					</div><!-- footer-copyright end -->
 				</div><!-- container end -->
