--- a/index.html
+++ b/index.html
@@ -60,6 +60,34 @@
 			</span>
 		</a><!-- scroll down btn end -->
 
+		<!-- Whatsapp icon start -->
+		<style media="screen">
+		.float{
+			position:fixed;
+			width:60px;
+			height:60px;
+			bottom:40px;
+			right:40px;
+			background-color:#000;
+			color:#FFF;
+			border-radius:50px;
+			text-align:center;
+			font-size:30px;
+			box-shadow: 2px 2px 2px #000;
+			z-index:100;
+			}
+
+			.my-float{
+			margin-top:16px;
+			}
+		</style>
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<a href="https://api.whatsapp.com/send?phone=919746583440" class="float" target="_blank">
+		<i class="fa fa-whatsapp my-float"></i>
+		</a>
+		<!-- Whatsapp icon end -->
+
 		<!-- header start -->
 		<header class="fixed-header">
 			<!-- logo start -->
@@ -136,6 +164,9 @@
 					<a href="about-us.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
 				</li>
 				<li class="landing-nav__btn">
+					<a href="services.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
+				</li>
+				<li class="landing-nav__btn">
 					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
@@ -174,6 +205,13 @@
 					<li class="nav-btn-box">
 						<a href="about-us.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="About">About</span>
+						</a>
+					</li><!-- nav-btn-box end -->
+
+					<!-- nav-btn-box start -->
+					<li class="nav-btn-box">
+						<a href="services.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+							<span class="nav-btn__inner" data-text="About">Services</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
@@ -248,7 +286,7 @@
 				<!-- nav-copyright start -->
 				<div class="nav-copyright text-right">
 					<p class="copyright-style nav-fade-anim js-nav-anim">
-						&copy; Copyright 2020 Dax. Developed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
+						&copy; Copyright 2021 Dax. Developed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
 					</p>
 				</div><!-- nav-copyright end -->
 			</div><!-- pos-rel end -->
@@ -263,14 +301,11 @@
 					<!-- swiper-slide start -->
 					<div class="swiper-slide">
 						<!-- slide-bg -->
-<<<<<<< HEAD
 						<div class="js-parallax-slide-bg bg-img-cover">
-							<video src="assets/images/backgrounds/digital 2.mp4" class="video-bg" muted loop autoplay playsinline></video>
+							<video src="assets/images/backgrounds/im.mp4" class="video-bg" muted loop autoplay playsinline></video>
 						</div>
 						<!-- <div class="js-parallax-slide-bg bg-img-cover" style="background-image:url(assets/images/backgrounds/p1.jpg)"></div> -->
-=======
-						<div class="js-parallax-slide-bg bg-img-cover" style="background-image:url(assets/images/backgrounds/luca-bravo-ujhKqutt3f0-unsplash.jpg)"></div>
->>>>>>> parent of 67938d5... pages edit
+						<!-- <div class="js-parallax-slide-bg bg-img-cover" style="background-image:url(assets/images/backgrounds/luca-bravo-ujhKqutt3f0-unsplash.jpg)"></div> -->
 						<!-- bg-overlay -->
 						<div class="bg-overlay-black"></div>
 
@@ -1176,15 +1211,34 @@
 								<div class="swiper-slide slide-scale-anim">
 									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40 content-bg-light-2 border-radius-10px">
 										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">
-											Pok pok authentic fashion axe, vegan venmo leggings raclette tousled twee tattooed. Banh mi humblebrag hammock tacos fashion axe aesthetic vegan sustainable taiyaki thundercats jean shorts tousled cloud bread waistcoat kogi. Cloud bread cardigan messenger bag raw.
+											DAX delivers a rare combination of creative conceptualization and incredible design - we are simply thrilled with the results!
+											Working with Wasith is effortless - he has the business savvy to quickly grasp concepts and turn out exceptional visuals with very little revision required - and all within the committed deadlines.
+											 I can't say enough about the quality, the speed, the attention to detail and the effectiveness of his work!"
+										 </p>
+										<!-- anim-img-scale start -->
+										<div class="anim-img-scale testimonials-author border-radius-50perc">
+											<img class="anim-img-scale__inner" src="assets/images/clients/ps.png" alt="author">
+										</div><!-- anim-img-scale end -->
+										<div class="margin-top-20 text-center">
+											<span class="headline-xxxs text-color-black">Powershift</span><br>
+											<span class="subhead-xxs text-color-888888">Dubai</span>
+										</div>
+									</div>
+								</div><!-- swiper-slide end -->
+
+								<!-- swiper-slide start -->
+								<div class="swiper-slide slide-scale-anim">
+									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40 content-bg-light-2 border-radius-10px">
+										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">
+											"We have been very impressed with DAX methodology and approach to the project. They have also given us exceptional insights into new trends in what is an ever-changing field."
 										</p>
 										<!-- anim-img-scale start -->
 										<div class="anim-img-scale testimonials-author border-radius-50perc">
-											<img class="anim-img-scale__inner" src="assets/images/testimonials/woman-wearing-white-and-black-shirt-1388888.jpg" alt="author">
+											<img class="anim-img-scale__inner" src="assets/images/clients/ass timber.png" alt="author">
 										</div><!-- anim-img-scale end -->
 										<div class="margin-top-20 text-center">
-											<span class="headline-xxxs text-color-black">Lucille Hatcher</span><br>
-											<span class="subhead-xxs text-color-888888">Investor</span>
+											<span class="headline-xxxs text-color-black">Associate Timbers</span><br>
+											<span class="subhead-xxs text-color-888888">Kannur</span>
 										</div>
 									</div>
 								</div><!-- swiper-slide end -->
@@ -1192,14 +1246,16 @@
 								<!-- swiper-slide start -->
 								<div class="swiper-slide slide-scale-anim">
 									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40 content-bg-light-2 border-radius-10px">
-										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">Pitchfork vaporware hella, vice next level art party subway tile swag portland. Cliche authentic photo booth, seitan sartorial iPhone brooklyn bicycle rights whatever small batch selvage affogato yuccie adaptogen vinyl. Sartorial franzen tacos cardigan, offal gluten-free pour-over.</p>
+										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">
+											The team at DAX are a pleasure to work with. They really have their fingers on the pulse when it comes to new initiatives in the world of digital marketing."
+										</p>
 										<!-- anim-img-scale start -->
 										<div class="anim-img-scale testimonials-author border-radius-50perc">
-											<img class="anim-img-scale__inner" src="assets/images/testimonials/man-standing-near-building-white-black-turtleneck-shirt-874158.jpg" alt="author">
+											<img class="anim-img-scale__inner" src="assets/images/clients/arm-red.png" alt="author">
 										</div><!-- anim-img-scale end -->
 										<div class="margin-top-20 text-center">
-											<span class="headline-xxxs text-color-black">Edward Jordan</span><br>
-											<span class="subhead-xxs text-color-888888">Cytotechnologist</span>
+											<span class="headline-xxxs text-color-black">AR Motors</span><br>
+											<span class="subhead-xxs text-color-888888">Dubai</span>
 										</div>
 									</div>
 								</div><!-- swiper-slide end -->
@@ -1207,47 +1263,20 @@
 								<!-- swiper-slide start -->
 								<div class="swiper-slide slide-scale-anim">
 									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40 content-bg-light-2 border-radius-10px">
-										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">Chambray enamel pin synth shabby chic palo santo. Franzen 90's man bun wayfarers, put a bird on it twee four loko roof party shabby chic kale chips photo booth salvia mixtape lumbersexual. Pug kickstarter hammock unicorn, cardigan ennui celiac roof party. Ramps pitchfork direct.</p>
+										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">
+											Excellent creative design on excellent ads and cutting-edge website design.
+										</p>
 										<!-- anim-img-scale start -->
 										<div class="anim-img-scale testimonials-author border-radius-50perc">
-											<img class="anim-img-scale__inner" src="assets/images/testimonials/informal-young-woman-listening-to-music-near-grunge-wall-3771823.jpg" alt="author">
+											<img class="anim-img-scale__inner" src="assets/images/clients/cpg-red.png" alt="author">
 										</div><!-- anim-img-scale end -->
 										<div class="margin-top-20 text-center">
-											<span class="headline-xxxs text-color-black">Mary Ross</span><br>
-											<span class="subhead-xxs text-color-888888">Fashion designer</span>
-										</div>
-									</div>
-								</div><!-- swiper-slide end -->
-
-								<!-- swiper-slide start -->
-								<div class="swiper-slide slide-scale-anim">
-									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40 content-bg-light-2 border-radius-10px">
-										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">Copper mug vexillologist +1 prism iPhone fashion axe portland. Hella quinoa woke blog af umami tacos freegan vinyl snackwave microdosing. Fanny pack direct trade XOXO drinking vinegar. Live-edge kinfolk master cleanse brooklyn meh organic man braid. Actually humblebrag sriracha.</p>
-										<!-- anim-img-scale start -->
-										<div class="anim-img-scale testimonials-author border-radius-50perc">
-											<img class="anim-img-scale__inner" src="assets/images/testimonials/photography-of-guy-wearing-yellow-hoodie-1183266.jpg" alt="author">
-										</div><!-- anim-img-scale end -->
-										<div class="margin-top-20 text-center">
-											<span class="headline-xxxs text-color-black">Dwight Bell</span><br>
+											<span class="headline-xxxs text-color-black">Career Point Global</span><br>
 											<span class="subhead-xxs text-color-888888">Banquet manager</span>
 										</div>
 									</div>
 								</div><!-- swiper-slide end -->
 
-								<!-- swiper-slide start -->
-								<div class="swiper-slide slide-scale-anim">
-									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40 content-bg-light-2 border-radius-10px">
-										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">Bushwick tumeric slow-carb photo booth letterpress franzen kombucha tumblr listicle cronut waistcoat mustache. Jean shorts tilde swag cray. Microdosing heirloom wayfarers YOLO, church-key tattooed cred blue bottle viral lyft tacos retro. Bespoke drinking vinegar single-origin.</p>
-										<!-- anim-img-scale start -->
-										<div class="anim-img-scale testimonials-author border-radius-50perc">
-											<img class="anim-img-scale__inner" src="assets/images/testimonials/man-standing-on-stairs-1254502.jpg" alt="author">
-										</div><!-- anim-img-scale end -->
-										<div class="margin-top-20 text-center">
-											<span class="headline-xxxs text-color-black">Brian Amos</span><br>
-											<span class="subhead-xxs text-color-888888">Health educator</span>
-										</div>
-									</div>
-								</div><!-- swiper-slide end -->
 							</div><!-- swiper-wrapper end -->
 
 							<!-- swiper-button-prev start -->
@@ -1298,7 +1327,7 @@
 								<a href="blog.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/decor-and-furniture/two-vases-on-table-842950.jpg" alt="Post">
+											<img class="img-hover-scale" src="https://images.unsplash.com/photo-1514580426463-fd77dc4d0672?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTB8fGRpZ2l0YWx8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Post">
 										</div>
 									</div>
 								</a>
@@ -1439,8 +1468,11 @@
 					<div class="flex-container flex-align-center">
 						<!-- column start -->
 						<div class="eight-columns">
-							<h4 class="column-l-r-margin-10 headline-l footer-title">
-								The <span class="text-color-red">Best<br>Agency</span> for<br>Your Business
+							<h4 class="column-l-r-margin-10 headline-l footer-title" style="font-size:40px;">
+								<!-- The <span class="text-color-red">Best<br>Agency</span> for<br>Your Business -->
+								<span class="text-color-red">A</span>bsolute<span class="text-color-red">...</span><br>
+								We’re Not Jusy Your<span class="text-color-red"> Agency,</span><br>
+								We’re Your<span class="text-color-red"> Partner.</span><br>
 							</h4>
 						</div><!-- column end -->
 						<!-- column start -->
@@ -1451,6 +1483,9 @@
 								</li>
 								<li>
 									<a href="about-us.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
+								</li>
+								<li>
+									<a href="Services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
 								</li>
 								<li>
 									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
@@ -1524,7 +1559,7 @@
 					<!-- footer-copyright start -->
 					<div class="footer-copyright text-center pos-abs pos-bottom-center">
 						<p class="copyright-style">
-							&copy; Copyright 2020 Dax. Developed By <a href="#" class="text-weight-700 js-pointer-small">Devil</a>
+							&copy; Copyright 2021 Dax. Designed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
 						</p>
 					</div><!-- footer-copyright end -->
 				</div><!-- container end -->
