--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@
 							<div class="swiper-wrapper js-slider-scroll-anim">
 								<!-- swiper-slide start -->
 								<div class="swiper-slide slide-scale-anim">
-									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40 content-bg-light-2 border-radius-10px">
+									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40">
 										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">
 											DAX delivers a rare combination of creative conceptualization and incredible design - we are simply thrilled with the results!
 											Working with Wasith is effortless - he has the business savvy to quickly grasp concepts and turn out exceptional visuals with very little revision required - and all within the committed deadlines.
@@ -1228,7 +1228,7 @@
 
 								<!-- swiper-slide start -->
 								<div class="swiper-slide slide-scale-anim">
-									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40 content-bg-light-2 border-radius-10px">
+									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40">
 										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">
 											"We have been very impressed with DAX methodology and approach to the project. They have also given us exceptional insights into new trends in what is an ever-changing field."
 										</p>
@@ -1245,7 +1245,7 @@
 
 								<!-- swiper-slide start -->
 								<div class="swiper-slide slide-scale-anim">
-									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40 content-bg-light-2 border-radius-10px">
+									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40">
 										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">
 											The team at DAX are a pleasure to work with. They really have their fingers on the pulse when it comes to new initiatives in the world of digital marketing."
 										</p>
@@ -1262,7 +1262,7 @@
 
 								<!-- swiper-slide start -->
 								<div class="swiper-slide slide-scale-anim">
-									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40 content-bg-light-2 border-radius-10px">
+									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40">
 										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">
 											Excellent creative design on excellent ads and cutting-edge website design.
 										</p>
@@ -1272,7 +1272,7 @@
 										</div><!-- anim-img-scale end -->
 										<div class="margin-top-20 text-center">
 											<span class="headline-xxxs text-color-black">Career Point Global</span><br>
-											<span class="subhead-xxs text-color-888888">Banquet manager</span>
+											<span class="subhead-xxs text-color-888888">Kannur</span>
 										</div>
 									</div>
 								</div><!-- swiper-slide end -->
