--- a/course 2.html
+++ b/course 2.html
@@ -209,7 +209,7 @@
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
 						<a href="services.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
-							<span class="nav-btn__inner" data-text="About">Services</span>
+							<span class="nav-btn__inner" data-text="Services">Services</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
@@ -230,7 +230,7 @@
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
 						<a href="blog.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
-							<span class="nav-btn__inner" data-text="Academy">Blog</span>
+							<span class="nav-btn__inner" data-text="Blog">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
@@ -593,7 +593,7 @@
 									<a href="about-us.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
 								</li>
 								<li>
-									<a href="Services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
+									<a href="services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
 								</li>
 								<li>
 									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
