--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
 						<a href="services.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
-							<span class="nav-btn__inner" data-text="About">Services</span>
+							<span class="nav-btn__inner" data-text="Services">Services</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
@@ -225,14 +225,14 @@
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
 						<a href="client.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
-							<span class="nav-btn__inner" data-text="Academy">Client</span>
+							<span class="nav-btn__inner" data-text="Client">Client</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
 						<a href="blog.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
-							<span class="nav-btn__inner" data-text="Academy">Blog</span>
+							<span class="nav-btn__inner" data-text="Blog">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
