--- a/index.html
+++ b/index.html
@@ -1372,7 +1372,7 @@
 									<a href="about-us.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
 								</li>
 								<li>
-									<a href="Services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
+									<a href="services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
 								</li>
 								<li>
 									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
