--- a/academy.html
+++ b/academy.html
@@ -547,7 +547,7 @@
 							<h4 class="column-l-r-margin-10 headline-l footer-title" style="font-size:40px;">
 								<!-- The <span class="text-color-red">Best<br>Agency</span> for<br>Your Business -->
 								<span class="text-color-red">A</span>bsolute<span class="text-color-red">...</span><br>
-								We’re Not Jusy Your<span class="text-color-red"> Agency,</span><br>
+								We’re Not Just Your<span class="text-color-red"> Agency,</span><br>
 								We’re Your<span class="text-color-red"> Partner.</span><br>
 							</h4>
 						</div><!-- column end -->
