--- a/services.html
+++ b/services.html
@@ -365,7 +365,7 @@
 							<div class="six-columns padding-top-30">
 								<div class="column-r-margin-40 text-right js-scrollanim">
 									<h4 class="headline-s hidden-box">
-										<span class="anim-slide">Degital Marketing</span>
+										<span class="anim-slide">Digital Marketing</span>
 									</h4>
 									<span class="subhead-xxs text-color-red d-block hidden-box margin-top-5">
 										<span class="anim-slide tr-delay-02"></span>
@@ -378,7 +378,7 @@
 							<div class="six-columns padding-top-30">
 								<div class="anim-img-reveal js-scrollanim">
 									<div class="anim-img-reveal__hidden">
-										<img class="anim-img-reveal__scale" src="https://images.unsplash.com/photo-1432888622747-4eb9a8efeb07?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1053&q=80" alt="Degital Marketing">
+										<img class="anim-img-reveal__scale" src="https://images.unsplash.com/photo-1432888622747-4eb9a8efeb07?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1053&q=80" alt="Digital Marketing">
 										<!-- <img class="anim-img-reveal__scale" src="assets/images/team/team_teachers/woman-in-white-button-up-shirt-standing-beside-black-wall-3184400.jpg" alt="Gloria Thayer"> -->
 									</div>
 								</div>
@@ -509,7 +509,7 @@
 							<h4 class="column-l-r-margin-10 headline-l footer-title" style="font-size:40px;">
 								<!-- The <span class="text-color-red">Best<br>Agency</span> for<br>Your Business -->
 								<span class="text-color-red">A</span>bsolute<span class="text-color-red">...</span><br>
-								We’re Not Jusy Your<span class="text-color-red"> Agency,</span><br>
+								We’re Not Just Your<span class="text-color-red"> Agency,</span><br>
 								We’re Your<span class="text-color-red"> Partner.</span><br>
 							</h4>
 						</div><!-- column end -->
